--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
    <p>paragraf 2</p>
    <p>paragraf</p>
    <p>paragraf czwarty</p>
+   <p>paragraf piaty</p>
+   <p>paragraf szosty</p>
 </body>
 </html>
