--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
    <p>paragraf</p>
    <p>paragraf czwarty</p>
    <p>paragraf piaty</p>
-   <p>paragraf szosty</p>
+   <p>paragraf siódmy</p>
 </body>
 </html>
