--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
    <p>paragraf</p>
    <p>paragraf czwarty</p>
    <p>paragraf piaty</p>
-<<<<<<< HEAD
-=======
+  <p>paragraf siódmy</p>
    <p>paragraf szosty</p>
->>>>>>> newbranch
    <p>paragraf siódmy</p>
 </body>
 </html>
