--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
    <p>paragraf piaty</p>
    <p>paragraf szosty</p>
    <p>paragraf siódmy</p>
+   <p>paragraf 8</p>
+   <p>paragraf 9</p>
 </body>
 </html>
