--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
   <p>paragraf siódmy</p>
    <p>paragraf szosty</p>
    <p>paragraf siódmy</p>
+   <p>pargraf 10</p>
+   <p>paragraf 11</p>
 </body>
 </html>
